--- a/media/sub1.html
+++ b/media/sub1.html
@@ -26,7 +26,7 @@
 
 	<div id="wrap">
 		<div class="videoBox">
-			<img src="./images/sub/sub1_big.jpg" id="imgBG">
+			<img src="./images/sub/sub1_big.jpg" id="imgBG" alt="">
 			<a class="down" href="#" title="스크롤 다운">
                 <div class="scroll">
                     <img src="./images/down.svg" alt="">
