--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <article id="content">
             <h2 class="hidden">본문 컨텐츠 영역</h2>
 
-            <section class="company" data-aos="fade-right" data-aos-duration="600" data-aos-duration="800">
+            <section class="company" data-aos="fade-right" data-aos-duration="600">
                 <h3>회사소개</h3>
                     <p class="p1">The Best<br>Hospitality Company</p>
 
