--- a/media/sub2.html
+++ b/media/sub2.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon"  type="image/x-icon"  href="./favicon.ico">
 	<link rel="apple-touch-icon-precomposed" href="./app_icon.png">
 	<link rel="apple-touch-startup-image" href="./startup.png">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<!-- <link rel="stylesheet" href="./css/swiper.min.css"> -->
 	<link rel="stylesheet" href="./css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="./css/common.css">
@@ -26,7 +26,7 @@
 
 <div id="wrap">
 	<div class="videoBox">
-		<img src="./images/sub/sub1_big.jpg" id="imgBG">
+		<img src="./images/sub/sub1_big.jpg" id="imgBG" alt="">
 		<a class="down" href="#" title="스크롤 다운">
 			<div class="scroll">
 				<img src="./images/down.svg" alt="">
@@ -215,11 +215,12 @@
                         <div class="swiper-button-prev"></div>
                     </div>
                 </div>
-            </section>
+            </div>    
+        </section>
             <!-- 모달 팝업 -->
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
-                <img class="modal-content" id="modalImg">
+                <img src="#" class="modal-content" id="modalImg" alt="">
             </div>
             <!-- 스티키 메뉴  -->
             <div class="mapNav">
