--- a/media/sub5.html
+++ b/media/sub5.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon"  type="image/x-icon"  href="./favicon.ico">
 	<link rel="apple-touch-icon-precomposed" href="./app_icon.jpg">
 	<link rel="apple-touch-startup-image" href="./startup.jpg">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/sub5.css">
 
@@ -24,7 +24,7 @@
 
 <div id="wrap">
 	<div class="videoBox">
-		<img src="./images/sub/sub1_big.jpg" id="imgBG">
+		<img src="./images/sub/sub1_big.jpg" id="imgBG" alt="">
 		<a class="down" href="#" title="스크롤 다운">
 			<div class="scroll">
 				<img src="./images/down.svg" alt="">
@@ -57,103 +57,103 @@
 	<article id="content">
 		<h2>GALLERY</h2>
         <section id="gallery">
-            
+            <h3 class="hidden">GALLERY</h3>
             <div class="masonry">
 
                 <div class="grid">
                     <div class="grid-sizer"></div>
                     <div class="grid-item">
-                        <img src="images/gallery/img1.jpg">
+                        <img src="images/gallery/img1.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img9.jpg">
+                        <img src="images/gallery/img9.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img2.jpg">
+                        <img src="images/gallery/img2.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img4.png">
+                        <img src="images/gallery/img4.png" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img3.jpg">
+                        <img src="images/gallery/img3.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img5.jpg">
+                        <img src="images/gallery/img5.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img6.jpg">
+                        <img src="images/gallery/img6.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img7.jpg">
+                        <img src="images/gallery/img7.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img8.jpg">
+                        <img src="images/gallery/img8.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img8.png">
+                        <img src="images/gallery/img8.png" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img10.jpg">
+                        <img src="images/gallery/img10.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img11.jpg">
+                        <img src="images/gallery/img11.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img12.jpg">
+                        <img src="images/gallery/img12.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img13.png">
+                        <img src="images/gallery/img13.png" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img14.jpg">
+                        <img src="images/gallery/img14.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img15.jpg">
+                        <img src="images/gallery/img15.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img16.jpg">
+                        <img src="images/gallery/img16.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img17.jpg">
+                        <img src="images/gallery/img17.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img18.jpg">
+                        <img src="images/gallery/img18.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img10.png">
+                        <img src="images/gallery/img10.png" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img19.jpg">
+                        <img src="images/gallery/img19.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img20.jpg">
+                        <img src="images/gallery/img20.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img21.jpg">
+                        <img src="images/gallery/img21.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img22.jpg">
+                        <img src="images/gallery/img22.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img23.jpg">
+                        <img src="images/gallery/img23.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img24.jpg">
+                        <img src="images/gallery/img24.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img25.jpg">
+                        <img src="images/gallery/img25.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img26.png">
+                        <img src="images/gallery/img26.png" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img27.jpg">
+                        <img src="images/gallery/img27.jpg" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img29.png">
+                        <img src="images/gallery/img29.png" alt="">
                     </div>
                     <div class="grid-item">
-                        <img src="images/gallery/img30.jpg">
+                        <img src="images/gallery/img30.jpg" alt="">
                     </div>
                 </div>
              
