--- a/mobile/sub2_1.html
+++ b/mobile/sub2_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "format-detection" content = "telephone=no"/> 
+    <meta name = "format-detection" content = "telephone=no"> 
     <title>브랜드소개-신라호텔</title>
     <link rel="apple-touch-icon-precomposed" href="./app_icon.png">
     <link rel="apple-touch-startup-image" href="./startup.png">
