--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <link rel="shortcut icon" type="image/x-icon"  href="./favicon.ico">
     <link rel="stylesheet" href="./common/css/common.css">
+    <link rel="stylesheet" href="./common/css/aos.css">
     <link rel="stylesheet" href="./maincss/mainlayout.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <script src="./common/js/prefixfree.min.js"></script>
     <script src="https://kit.fontawesome.com/76a37e14a5.js" crossorigin="anonymous"></script>
