--- a/media/index.html
+++ b/media/index.html
@@ -10,8 +10,8 @@
     <link rel="apple-touch-icon-precomposed" href="./app_icon.png">
     <link rel="apple-touch-startup-image" href="./startup.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <link rel="stylesheet" href="./css/aos.css">
    	<link rel="stylesheet" href="./css/swiper.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="./css/swiper-bundle.min.css"> -->
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/layout.css">
