--- a/sub2/sub2_3.html
+++ b/sub2/sub2_3.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사업영역-SHP사업</title>
     <link rel="stylesheet" href="../common/css/common.css">
+    <link rel="stylesheet" href="../common/css/aos.css">
     <link rel="stylesheet" href="./common/css/sub2common.css">
     <link rel="stylesheet" href="./css/sub2_content3.css">
     <link rel="stylesheet" href="../common/css/swiper.min.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <!-- <script src="./common/js/prefixfree.min.js"></script> -->
+    <script src="./common/js/prefixfree.min.js"></script>
     <script src="https://kit.fontawesome.com/76a37e14a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
