--- a/sub6/sub6_1.html
+++ b/sub6/sub6_1.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사회공헌-맛있는 제주만들기</title>
     <link rel="stylesheet" href="../common/css/common.css">
+    <link rel="stylesheet" href="../common/css/aos.css">
     <link rel="stylesheet" href="./common/css/sub6common.css">
     <link rel="stylesheet" href="./css/sub6_content1.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
-    <script src="https://kit.fontawesome.com/76a37e14a5.js" crossorigin="anonymous"></script>
     <script src="./common/js/prefixfree.min.js"></script>
+    <script src="https://kit.fontawesome.com/76a37e14a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
