--- a/sub6/sub6_2.html
+++ b/sub6/sub6_2.html
@@ -8,12 +8,14 @@
         #headerArea #gnb{background:none;}
     </style>
     <link rel="stylesheet" href="../../common/css/common.css">
+    <link rel="stylesheet" href="../common/css/aos.css">
     <link rel="stylesheet" href="../../sub6/common/css/sub6common.css">
     <link rel="stylesheet" href="../../sub6/css/sub6_content2.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-    <!-- <script src="../../common/js/prefixfree.min.js"></script> -->
+    
+    <script src="../../common/js/prefixfree.min.js"></script>
     <script src="https://kit.fontawesome.com/76a37e14a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
