index.html 태그 수정 및 mainlayout.css 브랜드 소개 영역 수정

--- a/index.html
+++ b/index.html
@@ -114,39 +114,47 @@
                     <div class="brand_con" data-aos="fade-up" data-aos-delay="1000">
                         <ul>
                             <li>
-                                <img src="./mainimages/logo1.png" alt="신라호텔">
-                                <h4>신라호텔</h4>
-                                <a href="./sub3/sub3_1.html" title=""><span class="material-symbols-outlined">
-                                    expand_circle_right</span></a>
-                                <p>시대를 아우르는 모던함을 가진<br>
-                                    럭셔리 라이프 스타일 브랜드입니다.</p>                                
+                                <a href="./sub3/sub3_1.html" title="">
+                                    <img src="./mainimages/logo1.png" alt="신라호텔">
+                                    <h4>신라호텔</h4>
+                                    <span class="material-symbols-outlined">
+                                        expand_circle_right</span>
+                                    <p>시대를 아우르는 모던함을 가진<br>
+                                        럭셔리 라이프 스타일 브랜드입니다.</p>   
+                                </a>                             
                             </li>
                             <li>
-                                <img src="./mainimages/logo2.png" alt="신라모노그램">
-                                <h4>신라모노그램</h4>
-                                <a href="./sub3/sub3_2.html" title=""><span class="material-symbols-outlined">
-                                    expand_circle_right</span></a>
-                                <p>지역, 환경과 신라만의 세심함을<br>
-                                    조화롭게 추구하는 브랜드입니다.
-                                </p>                               
+                                <a href="./sub3/sub3_2.html" title="">
+                                    <img src="./mainimages/logo2.png" alt="신라모노그램">
+                                    <h4>신라모노그램</h4>
+                                    <span class="material-symbols-outlined">
+                                        expand_circle_right</span>
+                                    <p>지역, 환경과 신라만의 세심함을<br>
+                                        조화롭게 추구하는 브랜드입니다.
+                                    </p>
+                                </a>
                             </li>
                             <li>
-                                <img src="./mainimages/logo3.png" alt="신라스테이">
-                                <h4>신라스테이</h4>
-                                <a href="./sub3/sub3_3.html" title=""><span class="material-symbols-outlined">
-                                    expand_circle_right</span></a>
-                                <p>신라만의 가치를 실용성 있고,<br>
-                                    합리적으로 경험할 수 있는 브랜드입니다.
-                                </p>
+                                <a href="./sub3/sub3_3.html" title="">
+                                    <img src="./mainimages/logo3.png" alt="신라스테이">
+                                    <h4>신라스테이</h4>
+                                    <span class="material-symbols-outlined">
+                                        expand_circle_right</span>
+                                    <p>신라만의 가치를 실용성 있고,<br>
+                                        합리적으로 경험할 수 있는 브랜드입니다.
+                                    </p>
+                                </a>
                             </li>
                             <li>
-                                <img src="./mainimages/logo4.png" alt="신라면세점">
-                                <h4>신라면세점</h4>
-                                <a href="./sub3/sub3_4.html" title=""><span class="material-symbols-outlined">
-                                    expand_circle_right</span></a>
-                                <p>최고의 쇼핑 경험은 물론이고<br>
-                                    신라의 차별화된 서비스의 브랜드입니다.
-                                </p>
+                                <a href="./sub3/sub3_4.html" title="">
+                                    <img src="./mainimages/logo4.png" alt="신라면세점">
+                                    <h4>신라면세점</h4>
+                                    <span class="material-symbols-outlined">
+                                        expand_circle_right</span>
+                                    <p>최고의 쇼핑 경험은 물론이고<br>
+                                        신라의 차별화된 서비스의 브랜드입니다.
+                                    </p>
+                                </a>
                             </li>
                         </ul>                        
                     </div>
