반응형 html 들여쓰기 수정 및 기업형 sub6_1 ajax + Js 수정

--- a/sub6/sub6_1.html
+++ b/sub6/sub6_1.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     
-    <script src="./common/js/prefixfree.min.js"></script>
+    <!-- <script src="./common/js/prefixfree.min.js"></script> -->
     <script src="https://kit.fontawesome.com/76a37e14a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -49,8 +49,6 @@
                 </div>
                 <div>
                     <div class="con1" data-aos="fade-up">
-                        <img src="./images/content1/tit.jpg" alt="">
-                        <img src="./images/content1/jejumap.jpg" alt="">
                         <div data-aos="fade-up">
                             <h4>맛있는 제주 만들기</h4>
                             <span>상생협력(특화) 프로그램</span>
@@ -92,7 +90,29 @@
                             맛제주 재개장 이후 식당매출평균 기존 대비 약 5배증가했으며<br>타 지역단체 벤치마킹 등 업계 우수 사회공헌 활동으로 자리매김하였습니다.
                         </p>
                     </div>
-                    <div class="restaurant" data-aos="fade-up">
+                    <div class="jejubg"></div>
+                    <div class="con3">
+                        <h5 class="hidden">맛있는 제주 만들기 지점 안내</h5>
+                        <img class="tit_img" src="./images/content1/tit.jpg" alt="맛있는 제주만들기">
+                        <div class="map_con">
+                            <div class="map_left">
+                                <img class="mapimg" src="./images/content1/jejumap.svg" alt="제주 지도">
+                                <div class="branch">
+                                    <img src="./images/content1/img1.jpg" alt="">
+                                    <ul>
+                                        <li>
+                                            <span>1호점</span><strong>신성할망식당</strong>
+                                        </li>
+                                        <li>제주 제주시 신대로7길 23</li>
+                                        <li>064-753-3976</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="restaurant" data-aos="fade-up">
+                                <div class="list1 relist"></div>
+                                <div class="list2 relist"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>          
             </div>
