기업형 sub6-1 태그 수정 및 JS 추가 수정

--- a/sub6/sub6_1.html
+++ b/sub6/sub6_1.html
@@ -96,7 +96,14 @@
                         <img class="tit_img" src="./images/content1/tit.jpg" alt="맛있는 제주만들기">
                         <div class="map_con">
                             <div class="map_left">
-                                <img class="mapimg" src="./images/content1/jejumap.svg" alt="제주 지도">
+                                <div class="map">
+                                    <img class="mapimg" src="./images/content1/jejumap.svg" alt="제주 지도">
+                                    <span class="jejutit">JEJU ISLAND</span>
+                                </div>
+                                <div class="pin">
+                                    <span class="material-symbols-rounded">
+                                    location_on</span>
+                                </div>
                                 <div class="branch">
                                     <img src="./images/content1/img1.jpg" alt="">
                                     <ul>
