--- a/common/sub_header.html
+++ b/common/sub_header.html
@@ -14,7 +14,7 @@
                 <h2 class="hidden">글로벌네비게이션</h2>
                 <ul class="dropdownmenu">
                     <li class="m1 menu">
-                        <h3><a class="depth1" href="../sub1/sub1_1.html"><span>회사소개</span></a></h3>
+                        <h3><a class="depth1" href="../sub1/sub1_1.html">회사소개</a></h3>
                         <ul>
                             <li><a href="../sub1/sub1_1.html">기업소개</a></li>
                             <li><a href="../sub1/sub1_2.html">비전&미션</a></li>
@@ -23,7 +23,7 @@
                         </ul>
                     </li>
                     <li class="m2 menu">
-                        <h3><a class="depth1" href="../sub2/sub2_1.html"><span>사업영역</span></a></h3>
+                        <h3><a class="depth1" href="../sub2/sub2_1.html">사업영역</a></h3>
                         <ul>
                             <li><a href="../sub2/sub2_1.html">호텔사업</a></li>
                             <li><a href="../sub2/sub2_2.html">TR사업</a></li>
@@ -32,7 +32,7 @@
                         </ul>
                     </li>
                     <li class="m3 menu">
-                        <h3><a class="depth1" href="../sub3/sub3_1.html"><span>브랜드소개</span></a></h3>
+                        <h3><a class="depth1" href="../sub3/sub3_1.html">브랜드소개</a></h3>
                         <ul>
                             <li><a href="../sub3/sub3_1.html">신라호텔</a></li>
                             <li><a href="../sub3/sub3_2.html">신라모노그램</a></li>
@@ -41,14 +41,14 @@
                         </ul>
                     </li>
                     <li class="m4 menu">
-                        <h3><a class="depth1" href="../sub4/sub4_1.html"><span>기업경영</span></a></h3>
+                        <h3><a class="depth1" href="../sub4/sub4_1.html">기업경영</a></h3>
                         <ul>
                             <li><a href="../sub4/sub4_1.html">윤리경영</a></li>
                             <li><a href="../sub4/sub4_2.html">준법경영</a></li>
                         </ul>
                     </li>
                     <li class="m5 menu">
-                        <h3><a class="depth1" href="../sub5/sub5_1.html"><span>인재채용</span></a></h3>
+                        <h3><a class="depth1" href="../sub5/sub5_1.html">인재채용</a></h3>
                         <ul>
                             <li><a href="../sub5/sub5_1.html">인재상</a></li>
                             <li><a href="../sub5/sub5_2.html">인사제도</a></li>
@@ -57,7 +57,7 @@
                         </ul>
                     </li>
                     <li class="m6 menu">
-                        <h3><a class="depth1" href="../sub6/sub6_1.html"><span>사회공헌</span></a></h3>
+                        <h3><a class="depth1" href="../sub6/sub6_1.html">사회공헌</a></h3>
                         <ul>
                             <li><a href="../sub6/sub6_1.html">맛있는제주만들기</a></li>
                             <li><a href="https://yoonyque1480.mycafe24.com/gb/bbs/board.php?bo_table=gallery">드림메이커</a></li>
