기업형 index.html 내 aos 수정

--- a/index.html
+++ b/index.html
@@ -39,35 +39,32 @@
                     pause_circle
                     </span></span>
             </div>
-       
-            <!-- <span class="btn btnLeft">left</span>
-            <span class="btn btnRight">right</span> -->
         </div>
 
         <article id="content">
             <h2 class="hidden">본문 컨텐츠 영역</h2>
 
-            <section class="company" data-aos="fade-right" data-aos-duration="600">
+            <section class="company" data-aos="fade-right">
                 <h3>회사소개</h3>
                     <p class="p1">The Best<br>Hospitality Company</p>
 
-                    <div class="company_container" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                    <div class="company_container" data-aos="fade-up">
                         <div class="company_con">
                             <p class="p2">호텔신라는 한국을 대표하는<br> 서비스 기업으로서 고객만족과<br> 기업가치 극대화를 목표를 하고 있습니다.</p>
-                            <ul data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" class="company_img">
+                            <ul class="company_img" data-aos="fade-up" data-aos-duration="1000" >
                                 <li><a href="#"><img src="./mainimages/company_s1.jpg" alt="img_btn1"></a></li>
                                 <li><a href="#"><img src="./mainimages/company_s2.jpg" alt="img_btn2"></a></li>
                                 <li><a href="#"><img src="./mainimages/company_s3.jpg" alt="img_btn3"></a></li>
                                 <li><a href="#"><img src="./mainimages/company_s4.jpg" alt="img_btn4"></a></li>
                             </ul>
                         </div>
-                        <div  class="comp_img" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600"></div>
+                        <div class="comp_img" data-aos="fade-up" data-aos-duration="600"></div>
                         <a class="more" href="./sub1/sub1_1.html">자세히보기</a>
                     </div>
             </section>
 
             <section class="business">
-                <div class="business_container" data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000" >
+                <div class="business_container" data-aos="fade-down" data-aos-duration="600">
                     <h3>사업영역</h3>
                     <p class="p1">최고의 품격과 신뢰를 바탕으로 고객이 꿈꾸는 라이프 스타일을 제공합니다.</p>
                     <div class="business_menu">
@@ -90,9 +87,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="business_text" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+                    <div class="business_text" data-aos="fade-right" data-aos-delay="400">
                         <img src="./mainimages/business1.jpg" alt="">
-                        <dl data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+                        <dl data-aos="fade-up" data-aos-delay="300">
                             <dt>호텔 사업</dt>
                             <dd>
                                 한국 전통이라는 지붕 위에 모더니즘적 디자인 요소를 가미하여,삶에 여유와 품격을 한층 높여주는 프리미엄 라이프스타일 공간으로 변화를 거듭해 나가고 있습니다.
@@ -103,15 +100,15 @@
                 </div>
             </section>
 
-            <section class="brand" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
+            <section class="brand" data-aos="fade-up">
                 <div class="brand_container">
-                    <div class="brand_tit" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="600">
+                    <div class="brand_tit" data-aos="fade-up">
                       <h3>브랜드소개</h3>
                       <p class="p1">
                           호텔 신라로부터<br>시작되는 전통의 가치와<br>신뢰의 품격을 갖춘<br>브랜드를 소개합니다.<br>
                       </p>                    
                     </div>
-                    <div class="brand_con" data-aos="fade-up" data-aos-delay="1000">
+                    <div class="brand_con" data-aos="fade-up" data-aos-delay="400" >
                         <ul>
                             <li>
                                 <a href="./sub3/sub3_1.html" title="">
@@ -161,7 +158,7 @@
                 </div>
             </section>
 
-            <section class="social" data-aos="zoom-out" data-aos-delay="100" data-aos-duration="800">
+            <section class="social" data-aos="zoom-out" data-aos-duration="800">
                 <h3>사회공헌</h3>
                 <p class="p1">
                     호텔신라의 기품 있고 세심한 서비스 정신은 지역사회의 어려운 이웃과 함께할 때 더욱 빛을 발합니다.
@@ -176,8 +173,8 @@
                 </div>
             </section>
 
-            <section class="career" data-aos="fade-down" data-aos-delay="200" data-aos-duration="600">
-                <div class="career_container" data-aos="zoom-in" data-aos-delay="800" data-aos-duration="1000">
+            <section class="career" data-aos="fade-down">
+                <div class="career_container" data-aos="zoom-in" data-aos-delay="400" >
                     <h3>인재채용</h3>
                     <p>호텔신라에서는 변화를 지향하고 미래에 도전하는 당신을 기다립니다.<br>고객을 위한 마음 하나면 충분합니다.</p>
                     <a href="./sub5/sub5_1.html">바로가기</a>
