프로필 html & scss 수정

--- a/profile/index.html
+++ b/profile/index.html
@@ -6,8 +6,8 @@
 	<title>Portfolio - YoonKyeong</title>
 
     <link rel="shortcut icon" type="image/x-icon"  href="./favicon.ico">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="./css/style.css" >	
 	<script  src="js/jquery-2.1.1.min.js"></script>
 	<script  src="js/jquery.mousewheel.min.js"></script>
@@ -50,7 +50,7 @@
             <div class="pf_left">
                 <img src="./image/pf_me.jpg" alt="">
                 <ul class="link_btn">
-                    <li><a href="./resume/resume.html" target="_blank" title="온라인 이력서 새창에 열림">Online Resume</a></li>
+                    <li><a href="./resume/resume.html" target="_blank" title="온라인 이력서 새창에 열림">Resume</a></li>
                     <li><a href="./StroyBoard_이윤경.pdf" target="_blank" title="스토리보드 새창에 열림">Storyboard</a></li>
                     <li><a href="https://github.com/yoonyque148/portfolio.git" target="_blank" title="Github 새창에 열림">GitHub</a></li>
                 </ul>
@@ -117,7 +117,21 @@
             <div class="web_right">
                 <div class="tit">
                     <strong>The Shilla</strong>
-                    <p>HTML5 이전 방식의 코드로 적용된 호텔신라 기업 홈페이지 PC버전을 HTML5 & CSS3를 사용하여 최신 트렌드를 반영한 디자인으로 새롭게 구현했습니다. 헤딩태그의 부재와 이미지로 표현되어있던 텍스트와 이미지의 alt 누락 등의 문제점을 바르게 수정하여 논리적인 구조의 Markup 사용으로 웹 접근성과 웹 표준을 준수한 방식으로 개선하였습니다. 다양한 비주얼을 적용해 브랜드 가치 표현을 부각시키고, 기업의 전통적이고 오래된 이미지를 벗어나 세련되고 현대적이며, 트렌드에 부합하는 UI 디자인으로 리뉴얼하였습니다.</p>
+                    <ul>
+                        <li>Html5 이전 방식으로 제작된 기존의 호텔신라 기업 웹사이트 리뉴얼 프로젝트</li>
+                        <li>heading 태그의 부재와 이미지의 alt 속성 누락 등의 문제점 파악</li>
+                        <li>시멘틱 태그를 사용하여 SEO 최적화 및 Outline 재구성으로 웹 접근성과 웹 표준을 준수</li>
+                        <li>4:3 비율의 고전적인 index 페이지와 단조로운 느낌과 트렌드에 뒤처진 레이아웃</li>
+                        <li>기업의 전통적이고 오래된 이미지를 벗어나 세련되고 현대적인 UI 디자인으로 리뉴얼</li>
+                        <li>header와 nav영역을 한눈에 볼 수 있도록 jQuery를 사용해 Dropdown 기능 구현</li>
+                        <li>jQuery를 활용한 index Visual과 Tab 메뉴, scroll spy, Accodian, Gallery 기능 구현</li>
+                        <li>Ajax를 사용해 다양한 매장 정보를 객체 배열로 받아 hover 이벤트에 적용</li>
+                        <li>W3C의 마크업 검증, CSS 검사, 웹 접근성 검사 모두 통과 완료</li>
+                        <li>다양한 브라우저 환경에서 호환성 테스트 완료 - 크로스 브라우징</li>
+                    </ul>
+                    <a class="bfore" href="https://www.hotelshilla.net/navigate.do?HPSiteCd=H&HPHome=Y&HPPageId=AVEzuf0oADQCZlru" target="_blank" title="호텔신라 홈페이지 새창으로 열기"><span class="material-symbols-outlined">
+                        link
+                        </span></a>
                     <a href="https://yoonyque1480.mycafe24.com/" target="_blank" title="기업형 PC 웹사이트 새창으로 열기">Visit Site</a>
                 </div>
                 <div class="colorfont">
@@ -167,7 +181,16 @@
             <div class="mb_right">
                 <div class="tit">
                     <strong>The Shilla</strong><span>mobile</span>
-                    <p>PC버전으로 구현된 호텔신라 기업 홈페이지를 다양한 모바일 기기에 적합한 UI를 적용하여 새롭게 구현한 모바일용 웹사이트입니다. 사용자의 터치 이벤트를 중점적으로 작업하였으며, 모바일에서 전달력을 높일 수 있게 2단 이하의 레이아웃을 채택하였습니다. 모바일 사용자 경험을 고려하여 PC버전보다는 간략화된 컨텐츠와 메뉴로 구성하였습니다.</p>
+                    <ul>
+                        <li>리뉴얼한 기업형 PC버전을 모바일 환경에 적합한 UI로 새롭게 구현한 모바일 웹사이트</li>
+                        <li>모바일 환경에 맞춰 터치 이벤트를 중점적으로 구성하고, 2단 이하의 레이아웃을 채택</li>
+                        <li>모바일 UI를 고려하여 PC버전보다 간략화된 콘텐츠와 메뉴로 구성</li>
+                        <li>Media Query와 JavaScript를 활용하여 해상도별 이미지 최적화</li>
+                        <li>gnb 영역에 햄버거 메뉴를 배치하고 아코디언 기능을 적용</li>
+                        <li>swiper 슬라이더 플러그인 적용</li>
+                        <li>W3C의 마크업 검증, CSS 검사, 웹 접근성 검사 모두 통과 완료</li>
+                        <li>모바일 대표 기기별 테스트 완료</li>
+                    </ul>
                     <a href="https://yoonyque1480.mycafe24.com/mobile" target="_blank" title="기업형 모바일 웹사이트 새창으로 열기">Visit Site</a>
                 </div>
                 <div class="colorfont">
@@ -221,7 +244,16 @@
             <div class="rw_right">
                 <div class="tit">
                     <strong>Battle Ground</strong>
-                    <p>한국의 대표적인 FPS게임 배틀그라운드를 주제로 반응형 웹사이트를 구현하였습니다. Media Query를 사용해 디바이스별 해상도에 최적화되도록 UI를 설계했습니다. 게임과 부합하는 분위기를 강조하는 컬러 선정하고, Flex, Grid를 사용해 다양한 레이아웃 방식 채택했습니다. masonry JS플러그인과 Json & Ajax를 비동기처리 방식을 Swiper에 적용시켰으며, 스크롤 이벤트와 Animation CSS로 다양한 애니메이션을 사용해 모션을 추가하였습니다.</p>
+                    <ul>
+                        <li>한국의 대표적인 FPS게임인 배틀그라운드를 주제로 반응형 웹 프로젝트</li>
+                        <li>Media Query를 활용해 디바이스별 해상도에 최적화된 UI 설계</li>
+                        <li>Flex와 Grid를 사용하여 다양한 레이아웃 적용</li>
+                        <li>CSS Nesting 기법을 사용하여 코드의 간결성과 재사용성을 높임</li>
+                        <li>CSS Animation을 통해 모션을 추가하고 scroll 이벤트를 적용하여 총알이 날아와 박히는 동적 효과 구현</li>
+                        <li>Json & Ajax를 비동기처리 방식을 사용해 다양한 총기정보를 불러와 Swiper에 적용</li>
+                        <li>Magnific Popup 플러그인을 사용하여, 영상이 페이지 내부에 팝업되어 재생되게 구현</li>
+                        <li>Masonry 플러그인으로 간단한 갤러리 페이지 구성</li>
+                    </ul>
                     <a href="https://yoonyque1480.mycafe24.com/media" target="_blank" title="반응형 웹사이트 새창으로 열기">Visit Site</a>
                 </div>
                 <div class="colorfont">
