기업형 sub6_1.html & css 수정

--- a/sub6/sub6_1.html
+++ b/sub6/sub6_1.html
@@ -55,43 +55,26 @@
                         </div>
                         <div data-aos="fade-up">
                             <h5>제주도 영세식당지원으로 제주 음식 문화 강화</h5>
-                            <p>제주의 영세 자영업자들에게 재기의 발판을 제공하고자 호텔신라 임직원들이 조리법·서비스 등에 대해
-                                맞춤 컨설팅을, 주방 설비·식당 외관 등 환경을 개선해주는 토탈기부형 프로그램입니다.
-                                </p>
+                            <p>제주의 영세 자영업자들에게 재기의 발판을 제공하고자 호텔신라 임직원들이 조리법·서비스 등에 대해 맞춤 컨설팅을, 주방 설비·식당 외관 등 환경을 개선해주는 토탈기부형 프로그램입니다.</p>
                         </div>
+                        <img src="./images/content1/volunteer.jpg" alt="" data-aos="fade-up">
                         <ul>
                             <li data-aos="fade-up" data-aos-delay="100">
                                 <dl>
-                                    <dt>호텔 임직원 재능기부형 사업으로<br>
-                                        영세자영식당 대상으로<br>
-                                        조리교육 및 리모델링 등 지원</dt>
-                                    <dd>신메뉴 개발 지원, 위생 등<br>
-                                        식당 운영에 대한 체계적 교육지원</dd>
+                                    <dt>호텔 임직원 재능기부형 사업으로<br>조리교육 및 리모델링 등</dt>
+                                    <dd>신메뉴 개발 지원, 위생 등 식당 운영에 대한 체계적 교육지원</dd>
                                 </dl>
                             </li>
                             <li data-aos="fade-up" data-aos-delay="300">
                                 <dl>
-                                    <dt>오픈 식당에 대한<br>
-                                        메뉴 개선, 위생 등의<br>
-                                        지속적인 사후관리 실시</dt>
-                                    <dd>메뉴, 위생 등 4개 분야와<br>
-                                        22개 항목에 대한 정기점검 실시</dd>
+                                    <dt>오픈 식당에 대한 메뉴 개선, 위생 등의<br>지속적인 사후관리 실시</dt>
+                                    <dd>메뉴, 위생 등 4개 분야와 22개 항목에 대한 정기점검 실시</dd>
                                 </dl>
                             </li>
                         </ul>
                     </div>
                     <hr>
                     <div class="con2">
-                        <img src="./images/content1/volunteer.jpg" alt="" data-aos="fade-up">
-                        <h5 data-aos="fade-up">제주도 영세 자영식당 대상 사회 재기지원 및<br>
-                            국내 주요 관광지로서의 음식문화 경쟁력 강화</h5>
-                        <p data-aos="fade-up">2014년 시작, 제주도 내 24개 식당 재개장 진행</p>
-                        <p data-aos="fade-up">
-                            맛제주 재개장 이후 식당매출평균 기존 대비 약 5배증가했으며<br>타 지역단체 벤치마킹 등 업계 우수 사회공헌 활동으로 자리매김하였습니다.
-                        </p>
-                    </div>
-                    <div class="jejubg"></div>
-                    <div class="con3">
                         <h5 class="hidden">맛있는 제주 만들기 지점 안내</h5>
                         <img class="tit_img" src="./images/content1/tit.jpg" alt="맛있는 제주만들기">
                         <div class="map_con">
@@ -119,6 +102,15 @@
                                 <div class="list1 relist"></div>
                                 <div class="list2 relist"></div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="jejubg">
+                        <div class="con3">
+                            <p data-aos="fade-up">제주도 영세 자영식당 대상 사회 재기지원 및<br>국내 주요 관광지로서의 음식문화 경쟁력 강화</p>
+                            <p data-aos="fade-up">2014년 시작, 제주도 내 24개 식당 재개장 진행</p>
+                            <p data-aos="fade-up">
+                                맛제주 재개장 이후 식당매출평균 기존 대비 약 5배증가했으며<br>타 지역단체 벤치마킹 등 업계 우수 사회공헌 활동으로 자리매김하였습니다.
+                            </p>
                         </div>
                     </div>
                 </div>          
