모바일웹 sub3_2.html & css & js & json & img 파일 전체 수정

--- a/mobile/sub3_2.html
+++ b/mobile/sub3_2.html
@@ -110,8 +110,6 @@
                     </p>
                 </div>
                 <div class="con1" data-aos="fade-up">
-                    <img src="./images/sub3/tit.jpg" alt="맛있는제주만들기 타이틀">
-                    <img src="./images/sub3/jejumap.jpg" alt="제주도 일러스트맵">
                     <div data-aos="fade-up">
                         <h4>맛있는 제주 만들기</h4>
                         <span>상생협력(특화) 프로그램</span>
@@ -122,7 +120,38 @@
                     </div>
                 </div>
                 <div class="con2">
-                    <div class="con2_box">
+                    <h5 class="hidden">맛있는 제주 만들기 지점 안내</h5>
+                    <img data-aos="fade-up" class="tit_img" src="./images/sub3/tit.jpg" alt="맛있는 제주만들기">
+                    <div class="map_con">
+                        <div class="map_left" data-aos="fade-up">
+                            <div class="map">
+                                <img class="mapimg" src="./images/sub3/jejumap.svg" alt="제주 지도">
+                                <span class="jejutit">JEJU ISLAND</span>
+                            </div>
+                            <div class="pin">
+                                <span class="material-symbols-rounded">
+                                location_on</span>
+                            </div>
+                            <div class="branch" data-aos="fade-up">
+                                <img src="./images/sub3/img1.jpg" alt="">
+                                <ul>
+                                    <li>
+                                        <span>1호점</span><strong>신성할망식당</strong>
+                                    </li>
+                                    <li>제주 제주시 신대로7길 23</li>
+                                    <li>064-753-3976</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="restaurant" data-aos="fade-up">
+                            <div class="list1 relist"></div>
+                            <div class="list2 relist"></div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="con3">
+                    <div class="con3_box">
                         <img src="./images/sub3/volunteer.jpg" alt="맛있는 제주만들기 행사 사진" data-aos="fade-up">
                         <h5 data-aos="fade-up">제주도 영세 자영식당 대상 사회 재기지원 및 국내 주요 관광지로서의 음식문화 경쟁력 강화</h5>
                         <p data-aos="fade-up">2014년 시작,<br>제주도 내 24개 식당 재개장 진행</p>
@@ -131,7 +160,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="con3">
+
+                <div class="con4">
                     <ul>
                         <li data-aos="fade-up" data-aos-delay="100">
                             <dl>
@@ -150,12 +180,6 @@
                         </li>
                     </ul>
                 </div>
-                <div class="con4">
-                    <h5>맛있는 제주만들기 현황</h5>
-                    <div class="restaurant">
-                    </div>
-                    </div>          
-            </div>
         </article>
 
         <footer id="footerArea">
